--- a/app/src/main/res/layout/shopping_item_layout.xml
+++ b/app/src/main/res/layout/shopping_item_layout.xml
@@ -9,7 +9,8 @@
     android:layout_marginStart="10dp"
     android:layout_marginEnd="10dp"
     android:padding="10dp"
-    card_view:cardCornerRadius="4dp">
+    card_view:cardCornerRadius="4dp"
+                                   android:animateLayoutChanges="true">
 
     <LinearLayout
         android:padding="10dp"
